# artifacts/api-server/src/routes/index.ts
@@ -2,11 +2,13 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import authRouter from "./auth";
 import ordersRouter from "./orders";
+import invoicesRouter from "./invoices";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use("/auth", authRouter);
 router.use("/orders", ordersRouter);
+router.use("/invoices", invoicesRouter);
 
 export default router;
